# brutus

./: Dockerfile  docker-compose.yml
backend/: Cargo.toml
backend/.sqlx/: query-4077abc4ec8a257a1c00cc95d6854061bd62be4b267ed3c2e7af0fecc826248a.json  query-4e10832b23b5f31cb1a8d694fc0dfd74786b1af2eef092bbd4d698aaa267c2f6.json  query-5331401fa7c1cac1a457742b6e80e0d385c779ff8ed8ced02b86b0775412b478.json  query-7e103e40ee1cc03eefbe0cdcc6e259aeb727f5ccfcd350720cb0cf6eb7443e03.json  query-7f80838111336792c5c60fa880898e657bd8bae05d26054f43db4c20f7c75446.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-a5495984fa98628af5b0a8cb1ad0206036e6a7197e3677edc3bf9de8a861883b.json  query-a59c4faeaae9dfd367577a64a063684cb7f26db72e41920f4e07d9778f03bd86.json  query-ec5c93b9c20a9abe1005021c6663106e805ecab0b6069e0b72872a0d0c53ea35.json  query-fd7953c749cc76c20897f8f761ab3771cecff6942ecb5c8533f09b114d769517.json
backend/migrations/: 20240407072335_initial.down.sql  20240407072335_initial.up.sql  20240407082100_initial.down.sql  20240407082100_initial.up.sql  20240407090311_listing_timestamp.down.sql  20240407090311_listing_timestamp.up.sql
backend/src/: error.rs  main.rs
backend/src/endpoints/: api.rs  oauth.rs
backend/src/endpoints/api/: chat.rs  class.rs  drop.rs  listing.rs  trending.rs  user.rs  want.rs
backend/src/websocket/: mod.rs  server.rs  session.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  types.ts
frontend/src/api/: fetchData.ts
frontend/src/global/: AuthContext.tsx  Buttons.tsx  (+7 more)
(+22 files in other folders)
