[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-cors = "0.7.0"
actix-web = { version = "4.5.1" }
actix-web-httpauth = "0.8.1"
actix = "0.13.3"
actix-files = "0.6.5"
actix-web-actors = "4.3.0"
anyhow = "1.0.81"
chrono = "0.4.37"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
